# mwright

./: .buildinfo  .gitignore  CMakeLists.txt  LICENSE  README.md  fcode.html  index.html  mat-modindex.html  mcode.html  objects.inv  search.html  searchindex.js  testprograms.html
_sources/: ccode.rst.txt  fcode.rst.txt  testprograms.rst.txt
docs/source/: ccode.rst  conf.py.in  fcode.rst  index.rst  testprograms.rst
doctrees/: ccode.doctree  environment.pickle  fcode.doctree  index.doctree  mcode.doctree  testprograms.doctree
html/: ccode.html  f-modindex.html  genindex.html  index.html  searchindex.js  testprograms.html
html/_sources/: mcode.rst.txt
include/: wright_config.h.in
matlab/: heat.m  mainarditest.m  mwright.m
msrc/: cauchy.m  comparisoncauchy.m  convergence.m  convergence1.tikz  convergence2.tikz  convergencecfunction.m  convergencecfunctioncomplex.m  heatmapcomplex.m  mainarditest.m  mwright.m  section2plots.m
src/: brentmod.f90  wright.c  wright.f90  wrightmod.f90
test/: input.inp  mainarditest.f90  optimalxitest.f90  quadtest.f90  wrighttest.c  zwrighttest.c
